--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+
+}
+
 body {
     font-family: Arial, sans-serif;
 }
@@ -6,6 +11,7 @@ header {
     color: #fff;
     text-align: center;
     padding: 20px;
+    margin: 0px;
 }
 h1 {
     margin: 0;
@@ -13,6 +19,7 @@ h1 {
 nav {
     background-color: #7a7979;
     padding: 10px;
+    margin: 0px;
 }
 nav a {
     color: #fff;
